<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Color Picker</string>
    <string name="title_home">Home</string>
    <string name="title_palette">Palette</string>
    <string name="title_saved">Saved</string>
    <string name="title_login">Login</string>
    <string name="title_logout">Logout</string>
    <string name="black_text">Black Text</string>
    <string name="white_text">White Text</string>
    <string name="black_background">Black Background</string>
    <string name="white_background">White Background</string>
    <string name="darker">Darker</string>
    <string name="lighter">Lighter</string>
    <string name="complimentary">Complimentary</string>
    <string name="triadic">Triadic</string>
    <string name="copy_rgb">Copy RGB Value to Clipboard</string>
    <string name="copy_hex">Copy Hex Value to Clipboard</string>
    <string name="hex_hint">#aarrggbb</string>
    <string name="apply">Apply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>